--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -1,9 +1,9 @@
 ---
 // Footer component
 import type { SocialLink } from '@/types';
-import Button from '@/components/shared/Button.astro';
+import Button from '@/components/atoms/Button.astro';
 import classes from '@/data/styles.json';
-import SectionHeader from './SectionHeader.astro';
+import SectionHeader from '@/components/molecules/SectionHeader.astro';
 
 interface Props {
   socials: SocialLink[];
