--- a/src/components/organisms/SidebySide.astro
+++ b/src/components/organisms/SidebySide.astro
@@ -1,8 +1,7 @@
 ---
-import Button from '@/components/shared/Button.astro';
-import SectionHeader from '@/components/shared/SectionHeader.astro';
+import SectionHeader from '@/components/molecules/SectionHeader.astro';
 import classes from '@/data/styles.json';
-import Card from '@/components/Card.astro';
+import Card from '@/components/atoms/Card.astro';
 ---
 
 <section class="bg-secondary py-24" id="about">
