--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import ExperienceComponent from '@/components/Experience.astro';
+import ExperienceComponent from '@/components/molecules/Experience.astro';
 import experiences from '@/data/experiences.json';
 import education from '@/data/education.json';
 import styles from '@/data/styles.json';
