--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import SidebySide from '@/components/SidebySide.astro';
-import Toolbox from '@/components/Toolbox.astro';
+import SidebySide from '@/components/organisms/SidebySide.astro';
+import Toolbox from '@/components/organisms/Toolbox.astro';
 import Photo from '@/assets/images/me.png';
 
 const pagePayload = {
