--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -28,7 +28,7 @@ const { socials, copyright } = Astro.props;
           out via email or on LinkedIn — I'd love to hear from you.
         </p>
         <div class="flex flex-col items-center gap-6 pt-8">
-          <Button style="primary" href="https://www.linkedin.com/in/shavarsean/ " target="_blank">
+          <Button style="primary" href="https://www.linkedin.com/in/shavarsean/">
             <Icon name="LinkedIn" class="mr-3 h-6 w-6" width="24" height="24" />
             Connect on LinkedIn
           </Button>
