--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -14,7 +14,7 @@ interface Props {
 const { socials, copyright } = Astro.props;
 ---
 
-<footer role="contentinfo">
+<footer role="contentinfo" style="content-visibility: auto; contain-intrinsic-size: 600px;">
   <section
     class="border-border-secondary relative overflow-hidden border-t px-6 py-24"
     id="contact"
