--- a/src/components/atoms/Tool.astro
+++ b/src/components/atoms/Tool.astro
@@ -12,6 +12,6 @@ const { icon, name } = Astro.props;
 <div
   class="md:border-tool-border md:bg-tool rounded-xl p-4 text-center transition-all duration-300 hover:-translate-y-1 md:border"
 >
-  <Icon name={icon} class="mx-auto" wrap />
+  <Icon name={icon} class="mx-auto" wrap preserveColors />
   <div class="text-sm font-medium">{name}</div>
 </div>
