--- a/src/components/organisms/Toolbox.astro
+++ b/src/components/organisms/Toolbox.astro
@@ -16,6 +16,7 @@ import styles from '@/data/styles.json';
               headingLevel="h2"
               heading={['My Toolbox']}
               subHeading="A curated collection of modern tech I use to build fast, accessible, and scalable products."
+              colorOverride="text-white"
             />
           </div>
           <div class="mb-2 hidden gap-2 md:flex">
