--- a/src/components/molecules/SectionHeader.astro
+++ b/src/components/molecules/SectionHeader.astro
@@ -6,15 +6,16 @@ interface Props {
   heading: string | string[];
   subHeading?: string;
   headingLevel?: 'h1' | 'h2' | 'h3' | 'h4';
+  colorOverride?: string;
 }
 
-const { heading, subHeading, preHeading, headingLevel = 'h2' } = Astro.props;
+const { heading, subHeading, preHeading, headingLevel = 'h2', colorOverride = '' } = Astro.props;
 const HeadingTag = headingLevel;
 const isArray = Array.isArray(heading);
 ---
 
 <>
-  {preHeading && <span class={classes.preHeading}>{preHeading}</span>}
+  {preHeading && <span class={`${classes.preHeading} ${colorOverride || ''}`}>{preHeading}</span>}
   <HeadingTag class={classes.heading}>
     {
       isArray ? (
@@ -26,5 +27,5 @@ const isArray = Array.isArray(heading);
       )
     }
   </HeadingTag>
-  {subHeading && <span class={classes.subHeading}>{subHeading}</span>}
+  {subHeading && <span class={`${classes.subHeading} ${colorOverride || ''}`}>{subHeading}</span>}
 </>
