--- a/src/components/organisms/Hero.astro
+++ b/src/components/organisms/Hero.astro
@@ -42,10 +42,10 @@ const { preheading, heading, description, heroImage, heroLayout = 'standard' } =
             </Button>
           </div>
         </div>
-        <div class="relative mb-12 flex w-2/3 justify-center md:mb-0 md:w-2/5 lg:justify-end">
+        <div class="relative mb-12 flex w-2/3 max-w-[380px] justify-center md:mb-0 md:w-2/5 lg:justify-end">
           <div class="absolute inset-0 translate-y-4 rotate-6 rounded-2xl bg-gradient-to-tr from-zinc-200 to-transparent transition-transform duration-500 group-hover:rotate-6 dark:from-zinc-800" />
           <div class="absolute inset-0 translate-y-4 -rotate-2 rounded-2xl border-2 border-zinc-900 opacity-10 transition-opacity duration-500 group-hover:opacity-20 dark:border-white" />
-          <div class="relative aspect-[4/5] w-full">
+          <div class="relative aspect-[5/6]">
             <Image
               src={heroImage}
               alt="Portrait of Shavar"
