fix: page titie

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,7 +58,9 @@ const {
     <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>{title === 'Shavar Cox' ? title : title + ' | Shavar Cox'}</title>
+    <title>
+      {title === 'Shavar Cox | Senior Frontend Developer' ? title : title + ' | Shavar Cox'}
+    </title>
 
     <!-- Preload critical local fonts for optimal performance -->
     <link rel="preload" href="/fonts/poppins-400.woff2" as="font" type="font/woff2" crossorigin />
